[package]
name = "kinect"
description = "(WIP) A library for kinect motion tracking."
version = "0.0.0"
keywords = [ "kinect", "vision", "tracking", "motion", "camera" ]
authors = ["Brandon Thomas <bt@brand.io>",
           "Brandon Thomas <echelon@gmail.com>"]
license = "BSD-4-Clause"
repository = "https://github.com/echelon/kinect.rs"
documentation = "https://docs.rs/kinect"

[dependencies]

[dev_dependencies]
expectest = "0.10"

[badges]
travis-ci = { repository = "echelon/kinect.rs" }

